--- a/Template .css
+++ b/Template .css
@@ -57,6 +57,10 @@ h2{
   font-weight: 100;
   line-height: 2;
   color: #2c3e50;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate (-50%, -50%);
 }
 p{
   margin-bottom: 2rem;
