--- a/index.css
+++ b/index.css
@@ -71,9 +71,11 @@ section{
   padding: 20px;
   margin-bottom: 40px;
   background-color: #fff;
+  text-decoration: none;
   @include border-radius(4px);
   @include box-shadow(0 1px 0 rgba(0,0,0,.2));
 }
+
 
 /* Sticky Header Style */ 
 /* ---------------------------------------- */ 
