--- a/index.css
+++ b/index.css
@@ -1,103 +1,120 @@
-@import "compass/css3";
-
-@import "compass/css3";
+/*@import "compass/css3";
 @import "compass/reset";
-*{
+
+* {
     @include box-sizing(border-box);
-  }
-  
-  
-  
-  body{
+}
+
+body {
     background-color: #ecf0f1;
     font-family: helvetica, arial, sans-serif;
     font-size: 16px;
-    padding-top: 330px;
-    @include transition(padding-top .5s ease);
-  }
-  header{
+    height: 100vh;
+    display: flex;
+    justify-content: center;  Horizontaal centreren 
+    align-items: center;  Verticaal centreren 
+    margin: 0;
+    @include transition(all .5s ease);
+}
+
+header {
     width: 100%;
     height: 300px;
     background-color: #3498db;
     text-align: center;
     position: fixed;
     z-index: 1000;
-    top:0;
+    top: 0;
     overflow: hidden;
-  }
-  h1{
+}
+
+h1 {
     font-size: 42px;
     color: #fff;
     line-height: 230px;
     text-transform: uppercase;
     font-weight: 100;
     @include transition(all .3s ease);
-  }
-  nav{
+}
+
+nav {
     position: absolute;
     bottom: 0;
     height: 60px;
     line-height: 60px;
     width: 100%;
-    background-color: rgba(0,0,0,.1);
-  }
-  a{
+    background-color: rgba(0, 0, 0, .1);
+}
+
+a {
     color: #fff;
     display: inline-block;
     padding: 10px 15px;
     line-height: 1;
     text-decoration: none;
-     @include border-radius(2px);
-      &:hover{
+    @include border-radius(2px);
+    
+    &:hover {
         @include box-shadow(0 0 0 1px #fff);
-      }
-  }
-  h2{
+    }
+}
+
+h2 {
     font-size: 34px;
     text-transform: uppercase;
     font-weight: 100;
     line-height: 2;
     color: #2c3e50;
-  }
-  p{
+}
+
+p {
     margin-bottom: 2rem;
     line-height: 2;
     color: #7f8c8d;
-  }
-  .wrapper{
+}
+
+.wrapper {
     width: 800px;
     margin: 0 auto;
-  }
-  section{
+}
+
+section {
     padding: 20px;
     margin-bottom: 40px;
     background-color: #fff;
     text-decoration: none;
     @include border-radius(4px);
-    @include box-shadow(0 1px 0 rgba(0,0,0,.2));
-  }
+    @include box-shadow(0 1px 0 rgba(0, 0, 0, .2));
+}
 
-  body.sticky-header{
-    padding-top: 100px;
-    header{
-      height: 60px;
-      background-color: rgba(52,152,219,.9);
-      h1{
-        @include scale(0);
-      }
+body.sticky-header {
+    header {
+        height: 60px;
+        background-color: rgba(52, 152, 219, .9);
+
+        h1 {
+            @include scale(0);
+        }
     }
-  }
-  main{
+}
+
+main {
     z-index: 80;
-  }
-  .link {
-    text-decoration: none; display: inline-block; text-align: center; padding: 10px; border: 1px solid #ccc; border-radius: 8px;
+    text-align: center;
+}
+
+.link {
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
 }
 
 #links-container {
-    align-content: center;          
-    align-items: center; /* probeer ook flex-start, flex-end... */         
-    display: flex; 
-    flex-wrap: wrap; 
-    gap: 10px; 
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
 }
