--- a/new.css
+++ b/new.css
@@ -1,11 +1,72 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
+    /*achtergrond kleur*/
     background-color: #ecf0f1;
+    /*globaal font*/
     font-family: helvetica, arial, sans-serif;
     font-size: 16px;
     height: 100vh;
     display: flex;
-    justify-content: center; /* Horizontaal centreren */
-    align-items: center; /* Verticaal centreren */
+    flex-direction: column;
+    justify-content: center; /* Verticaal centreren */
+    align-items: center; /* Horizontaal centreren */
+    text-align: center;
     margin: 0;
-   
+}
+
+header {
+    margin-bottom: 20px;
+}
+
+header h1 {
+    font-size: 36px;
+    color: #3498db;
+    text-transform: uppercase;
+}
+
+nav a {
+    margin: 0 10px;
+    color: #fff;
+    background-color: #3498db;
+    padding: 10px 15px;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+nav a:hover {
+    background-color: #2980b9;
+}
+
+#links-container {
+    display: flex;
+    justify-content: center; /* Horizontaal centreren */
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.link {
+    text-decoration: none;
+    color: #2c3e50;
+}
+
+.link img {
+    display: block;
+    margin: 0 auto;
+}
+
+.link span {
+    display: block;
+    margin-top: 10px;
+    color: #999;
+    font-size: 20px;
+}
+
+section h2 {
+    font-size: 28px;
+    margin-bottom: 20px;
 }
