--- a/M1.css
+++ b/M1.css
@@ -113,13 +113,13 @@ section h2 {
 }.lesson-block:nth-child(12) {
     background-color: #6992df; /* Zachte paars */
 }.lesson-block:nth-child(13) {
-    background-color: #f3e8fd; /* Zachte paars */
+    background-color: #146735; /* Zachte paars */
 }.lesson-block:nth-child(14) {
-    background-color: #f3e8fd; /* Zachte paars */
+    background-color: #64c3c9; /* Zachte paars */
 }.lesson-block:nth-child(15) {
-    background-color: #f3e8fd; /* Zachte paars */
+    background-color: #9bce55; /* Zachte paars */
 }.lesson-block:nth-child(16) {
-    background-color: #f3e8fd; /* Zachte paars */
+    background-color: #ec9f68; /* Zachte paars */
 }
 /* Responsive layout voor schermen kleiner dan 768px (mobiele telefoons) */
 @media (max-width: 768px) {
