--- a/M4Tegel.css
+++ b/M4Tegel.css
@@ -8,12 +8,9 @@ body {
     background-color: #ecf0f1;
     font-family: helvetica, arial, sans-serif;
     font-size: 16px;
-    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
-    text-align: center;
     margin: 0;
 }
 
@@ -46,61 +43,76 @@ nav a:hover {
 }
 
 main {
-    max-width: 800px;
+    max-width: 900px;
     width: 100%;
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
 }
 
 section h2 {
     font-size: 32px;
-    margin-bottom: 30px;
+    margin-top: 40px;
     font-weight: bold;
     color: #2c3e50;
+    text-align: left;
 }
 
 #media-container {
     display: flex;
     gap: 20px;
-    margin-bottom: 40px;
+    margin: 20px 0;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .media-item {
     flex: 1;
     text-align: center;
+    min-width: 200px;
+    max-width: 300px;
 }
 
 .media-item video {
     width: 100%;
     border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.media-item span {
+    display: block;
+    margin-top: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #2c3e50;
 }
 
 #links-container {
     display: flex;
-    flex-wrap: wrap;
     gap: 20px;
+    flex-wrap: wrap;
     justify-content: center;
+    margin-top: 20px;
 }
 
 .link {
     text-decoration: none;
     color: #2c3e50;
+    text-align: center;
+    width: 150px;
 }
 
 .link img {
-    width: 150px;
-    height: auto;
+    width: 100%;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 10px;
 }
 
 .link span {
-    display: block;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
 }
 
@@ -123,8 +135,9 @@ section h2 {
         font-size: 28px;
     }
 
-    #media-container {
+    #media-container, #links-container {
         flex-direction: column;
+        align-items: center;
     }
 
     .media-item {
