--- a/M4Tegel.css
+++ b/M4Tegel.css
@@ -102,6 +102,10 @@ section h2 {
     color: #2c3e50;
     text-align: center;
     width: 150px;
+    flex: 1 1 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .link img {
@@ -109,6 +113,8 @@ section h2 {
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 10px;
+    object-fit: cover;
+    height: auto;
 }
 
 .link span {
