--- a/M3.css
+++ b/M3.css
@@ -82,6 +82,8 @@ section h2 {
 .lesson-block img {
     display: block;
     margin: 0 auto;
+    height: 100%;
+    width: 100%;
 }
 
 /* Zachte kleuren voor elk lesblok */
