--- a/M5.css
+++ b/M5.css
@@ -299,62 +299,62 @@ font-size: 14px; /* Verklein de tekst verder in de lesblokken */
 }
 }
 .lesson-block:nth-child(1) {
-    background-color: #0000FF; /* Stap 1 */
+    background-color: #B3E5FC; /* Stap 1: Pastelblauw */
 }
 .lesson-block:nth-child(2) {
-    background-color: #0014F2; /* Stap 2 */
+    background-color: #B5E9F8; /* Stap 2 */
 }
 .lesson-block:nth-child(3) {
-    background-color: #0029E6; /* Stap 3 */
+    background-color: #B8EDF4; /* Stap 3 */
 }
 .lesson-block:nth-child(4) {
-    background-color: #003DDA; /* Stap 4 */
+    background-color: #BBF1F0; /* Stap 4 */
 }
 .lesson-block:nth-child(5) {
-    background-color: #0052CD; /* Stap 5 */
+    background-color: #BEF5EB; /* Stap 5 */
 }
 .lesson-block:nth-child(6) {
-    background-color: #0066C1; /* Stap 6 */
+    background-color: #C1F9E7; /* Stap 6: Overgang naar pastelgroen */
 }
 .lesson-block:nth-child(7) {
-    background-color: #007AB5; /* Stap 7 */
+    background-color: #C4FCE3; /* Stap 7 */
 }
 .lesson-block:nth-child(8) {
-    background-color: #008FA9; /* Stap 8 */
+    background-color: #C7FEDD; /* Stap 8 */
 }
 .lesson-block:nth-child(9) {
-    background-color: #00A39C; /* Stap 9 */
+    background-color: #D0FEDA; /* Stap 9 */
 }
 .lesson-block:nth-child(10) {
-    background-color: #00B890; /* Stap 10 */
+    background-color: #D9FED6; /* Stap 10: Pastelgroen */
 }
 .lesson-block:nth-child(11) {
-    background-color: #00CC84; /* Stap 11 */
+    background-color: #E3FEEB; /* Stap 11: Overgang naar pastelgeel */
 }
 .lesson-block:nth-child(12) {
-    background-color: #00E178; /* Stap 12 */
+    background-color: #EEFFE1; /* Stap 12 */
 }
 .lesson-block:nth-child(13) {
-    background-color: #00F56B; /* Stap 13 */
+    background-color: #F7FFE1; /* Stap 13 */
 }
 .lesson-block:nth-child(14) {
-    background-color: #0FF65F; /* Stap 14 */
+    background-color: #FFFDDB; /* Stap 14 */
 }
 .lesson-block:nth-child(15) {
-    background-color: #33F753; /* Stap 15 */
+    background-color: #FFF8D1; /* Stap 15: Pastelgeel */
 }
 .lesson-block:nth-child(16) {
-    background-color: #4CF847; /* Stap 16 */
+    background-color: #FFE8DA; /* Stap 16: Overgang naar pastelroze */
 }
 .lesson-block:nth-child(17) {
-    background-color: #66F93A; /* Stap 17 */
+    background-color: #FFD1E4; /* Stap 17 */
 }
 .lesson-block:nth-child(18) {
-    background-color: #7FFA2E; /* Stap 18 */
+    background-color: #FFC0E9; /* Stap 18 */
 }
 .lesson-block:nth-child(19) {
-    background-color: #99FB22; /* Stap 19 */
+    background-color: #FEB1ED; /* Stap 19 */
 }
 .lesson-block:nth-child(20) {
-    background-color: #00FF00; /* Stap 20 */
+    background-color: #F8BBD0; /* Stap 20: Pastelroze */
 }
