--- a/M4Tegel.css
+++ b/M4Tegel.css
@@ -8,34 +8,30 @@ body {
     background-color: #ecf0f1;
     font-family: helvetica, arial, sans-serif;
     font-size: 16px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
+    text-align: center;
     margin: 0;
 }
 
 header {
     margin-top: 20px;
     margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
 }
 
 header h1 {
     font-size: 48px;
     color: #3498db;
     text-transform: uppercase;
-    margin: 0;
-    white-space: nowrap; /* Zorgt ervoor dat de tekst niet afbreekt */
+    margin-bottom: 20px;
+    text-decoration: none;
 }
 
-.link {
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-    color: inherit;
+header h1:hover{
+    text-decoration: underline;
 }
 
 nav {
@@ -64,6 +60,18 @@ main {
     margin-bottom: 20px;
 }
 
+
+.link {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    color: inherit;
+}
+
+
+
+
+n
 section h2 {
     font-size: 32px;
     margin-top: 40px;
