--- a/M4Tegel.css
+++ b/M4Tegel.css
@@ -33,6 +33,7 @@ header h1 {
     margin: 0; /* Verwijder extra ruimte */
     text-decoration: none;
     line-height: 1.2; /* Zorg voor nette tekstuitlijning */
+    text-align: center;
 }
 
 header h1:hover {
