--- a/Tegel.css
+++ b/Tegel.css
@@ -44,6 +44,15 @@ nav a {
 nav a:hover {
     text-decoration: underline;
 }
+/* Zorg ervoor dat links standaard niet onderlijnd zijn */
+nav a, .link {
+    text-decoration: none;
+}
+
+/* Maak links onderlijnd bij hover */
+nav a:hover, .link:hover {
+    text-decoration: underline;
+}
 
 main {
     margin-top: 10px;
