--- a/M4Tegel.css
+++ b/M4Tegel.css
@@ -112,30 +112,25 @@ section h2 {
 
 #links-container {
     display: flex;
-    gap: 20px;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 20px;
+    gap: 20px;
 }
 
 .link {
-    text-decoration: none;
-    color: #2c3e50;
-    text-align: center;
-
-
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+    width: 200px; /* Pas dit aan voor bredere of smallere afbeeldingen */
 }
 
 .link img {
     width: 100%;
+    max-width: 200px; /* Zorg dat alle afbeeldingen dezelfde breedte hebben */
+    height: auto;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: 10px;
-    object-fit: cover;
-    height: auto;
 }
 
 .link span {
