--- a/Tegel.css
+++ b/Tegel.css
@@ -20,7 +20,6 @@ body {
 header {
     margin-top: 20px;
     margin-bottom: 20px;
-    text-decoration: none;
 }
 
 header h1 {
@@ -34,7 +33,6 @@ header h1:hover{
     text-decoration: underline;
 }
 
-
 nav {
     margin-bottom: 40px;
 }
@@ -45,7 +43,6 @@ nav a {
     text-decoration: none;
     font-size: 18px;
     font-weight: 500;
-    text-decoration: none;
 }
 
 nav a:hover {
@@ -132,6 +129,21 @@ section {
     font-size: 20px;
     color: #7f8c8d;
     font-weight: bold;
+}
+a {
+
+    text-decoration: none;
+}
+nav a {
+    margin: 0 15px;
+    color: #3498db;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+nav a:hover {
+    text-decoration: underline;
 }
 
 /* Responsive layout */
