--- a/M2.css
+++ b/M2.css
@@ -28,6 +28,102 @@ header h1 {
     color: #3498db;
     text-transform: uppercase;
     margin-bottom: 20px;
+    text-decoration: none;
+}
+
+header h1:hover{
+    text-decoration: underline;
+}
+
+nav {
+    margin-bottom: 40px;
+}
+
+nav a {
+    margin: 0 15px;
+    color: #3498db;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
+main {
+    max-width: 800px;
+    width: 100%;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+section h2 {
+    font-size: 32px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    color: #2c3e50;
+}
+
+.lesson-block {
+    padding: 20px;
+    margin-bottom: 30px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+}
+
+.lesson-block p {
+    font-size: 18px;
+    color: #2c3e50;
+    margin-bottom: 20px;
+}
+
+.lesson-block audio {
+    display: block;
+    margin: 0 auto;
+}
+
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: #ecf0f1;
+    font-family: helvetica, arial, sans-serif;
+    font-size: 16px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    margin: 0;
+}
+
+header {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+header h1 {
+    font-size: 48px;
+    color: #3498db;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+ 
+}
+a {
+
+    text-decoration: none;
+}
+
+header h1:hover{
+    text-decoration: underline;
 }
 
 nav {
